--- a/Questão2.ipynb
+++ b/Questão2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "7e2c32ec",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "4817bb61",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "8c344ccf",
    "metadata": {},
    "outputs": [],
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "7f29dfd8",
    "metadata": {},
    "outputs": [
@@ -127,7 +127,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\vicen\\AppData\\Local\\Temp\\ipykernel_13548\\1942088953.py:81: UserWarning: No artists with labels found to put in legend.  Note that artists whose label start with an underscore are ignored when legend() is called with no argument.\n",
+      "C:\\Users\\vicen\\AppData\\Local\\Temp\\ipykernel_16092\\1942088953.py:81: UserWarning: No artists with labels found to put in legend.  Note that artists whose label start with an underscore are ignored when legend() is called with no argument.\n",
       "  plt.legend()\n"
      ]
     },
@@ -154,13 +154,12 @@
     }
    ],
    "source": [
-    "result = spline_cubica(x, y)\n",
-    "print(result)"
+    "result = spline_cubica(x, y)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "id": "5afc8cfe",
    "metadata": {},
    "outputs": [
@@ -168,26 +167,105 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[-12.25548546   8.99302484   4.36140799]\n",
-      "4.3614079873691605\n"
+      "[ 0.00068182 -0.00074928 -0.08484737  0.55774163]\n"
      ]
     }
    ],
    "source": [
-    "# Estimando o valor de x para f(x) = 0,23\n",
-    "y_atual = 0.23\n",
+    "print(result[2])\n",
+    "# Printamos os coeficientes associados a terceira curva e então montamos a equação "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "e9dc11f7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Equação gerada pelos coeficientes \n",
+    "def f_x(x):\n",
+    "    return ((x**3)*0.00068182 + (x**2)*-0.00074928 + (x)*-0.08484737 + 0.55774163 - 0.23)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "a0e25067",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def erro_relativo(x_ant, x_prox):\n",
+    "    return abs((x_prox-x_ant)/x_prox)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "52f06bb1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def bissecao(a, b, tol, max_iter):\n",
+    "    f_a = f_x(a)\n",
+    "    f_b = f_x(b)\n",
+    "    xr = (a + b)/2\n",
+    "    f_xr = f_x(xr)\n",
     "\n",
-    "a_2, b_2, c_2, d_2 = result[2]\n",
+    "    if f_xr * f_a < 0:\n",
+    "        b = xr\n",
+    "    else:\n",
+    "        a = xr  \n",
     "\n",
-    "p = [a_2, b_2, c_2, d_2 - 0.23]\n",
+    "    erro = 100\n",
+    "    iter = 1\n",
     "\n",
-    "raizes = np.roots(p)\n",
+    "    while erro > tol and iter <= max_iter:\n",
+    "        x_ant = xr\n",
+    "        f_a = f_x(a)\n",
+    "        f_b = f_x(b)\n",
+    "        xr = (a + b)/2\n",
+    "        f_xr = f_x(xr)\n",
+    "        erro = erro_relativo(x_ant, xr)\n",
     "\n",
-    "print(raizes)\n",
+    "        print(f\"Iteração {iter}: xr = {xr}, erro = {erro}\")\n",
     "\n",
-    "# Como estamos lidando com um valor de x entre 4 e 5, então x = 4.36140799\n",
+    "        if f_xr * f_a < 0:\n",
+    "            b = xr\n",
+    "        else:\n",
+    "            a = xr\n",
     "\n",
-    "print(raizes[2])"
+    "        iter += 1\n",
+    "\n",
+    "    return xr, erro\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "c2e63aa4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteração 1: xr = 4.25, erro = 0.058823529411764705\n",
+      "Iteração 2: xr = 4.375, erro = 0.02857142857142857\n",
+      "Iteração 3: xr = 4.3125, erro = 0.014492753623188406\n",
+      "Iteração 4: xr = 4.34375, erro = 0.007194244604316547\n",
+      "Iteração 5: xr = 4.359375, erro = 0.0035842293906810036\n",
+      "Iteração 6: xr = 4.3671875, erro = 0.0017889087656529517\n",
+      "Iteração 7: xr = 4.36328125, erro = 0.0008952551477170994\n",
+      "Iteração 8: xr = 4.361328125, erro = 0.0004478280340349306\n",
+      "Iteração 9: xr = 4.3623046875, erro = 0.00022386389075442132\n",
+      "Iteração 10: xr = 4.36181640625, erro = 0.00011194447554013209\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Estamos lidando com um valor de x entre 4 e 5. Então aplicamos o método da bissecção para estimar o valor de x\n",
+    "x_estimado = bissecao(4, 5, 0.00001, 10)"
    ]
   }
  ],
