--- a/Questão1.ipynb
+++ b/Questão1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "ea2d082f",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "d34e85d1",
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "id": "370dac1f",
    "metadata": {},
    "outputs": [],
@@ -48,6 +48,7 @@
     "    index_0 = 0\n",
     "\n",
     "    for i in range(n):\n",
+    "        # Preenchimento do intervalo (x(i), x(i+1))\n",
     "        matriz_spline_quadratica[index_0, 3*i] = x[i]**2\n",
     "        matriz_spline_quadratica[index_0, 3*i + 1] = x[i]\n",
     "        matriz_spline_quadratica[index_0, 3*i + 2] = 1\n",
@@ -62,7 +63,7 @@
     "        index_0 += 1\n",
     "\n",
     "    for i in range(1, n):\n",
-    "    \n",
+    "        # Continuidade da primeira derivada\n",
     "        matriz_spline_quadratica[index_0, 3*(i-1)]   = 2 * x[i]\n",
     "        matriz_spline_quadratica[index_0, 3*(i-1)+1] = 1        \n",
     "    \n",
@@ -72,13 +73,14 @@
     "        B_spline_quadratica[index_0] = 0\n",
     "        index_0 += 1\n",
     "\n",
-    "\n",
+    "    # Condição a0 = 0 (Condições de fronteira)\n",
     "    matriz_spline_quadratica[index_0, 0] = 1\n",
     "    B_spline_quadratica[index_0] = 0\n",
     "\n",
-    "\n",
+    "    print(matriz_spline_quadratica)\n",
     "    coeficientes = np.linalg.solve(matriz_spline_quadratica, B_spline_quadratica)\n",
     "    spline_coeficientes = coeficientes.reshape(n, 3)\n",
+    "    print(spline_coeficientes)\n",
     "\n",
     "    plt.figure(figsize=(10,6))\n",
     "\n",
@@ -103,15 +105,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 9,
    "id": "3ba52ae6",
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 2.56  1.6   1.    0.    0.    0.    0.    0.    0.    0.    0.    0.\n",
+      "   0.    0.    0.  ]\n",
+      " [ 4.    2.    1.    0.    0.    0.    0.    0.    0.    0.    0.    0.\n",
+      "   0.    0.    0.  ]\n",
+      " [ 0.    0.    0.    4.    2.    1.    0.    0.    0.    0.    0.    0.\n",
+      "   0.    0.    0.  ]\n",
+      " [ 0.    0.    0.    6.25  2.5   1.    0.    0.    0.    0.    0.    0.\n",
+      "   0.    0.    0.  ]\n",
+      " [ 0.    0.    0.    0.    0.    0.    6.25  2.5   1.    0.    0.    0.\n",
+      "   0.    0.    0.  ]\n",
+      " [ 0.    0.    0.    0.    0.    0.   10.24  3.2   1.    0.    0.    0.\n",
+      "   0.    0.    0.  ]\n",
+      " [ 0.    0.    0.    0.    0.    0.    0.    0.    0.   10.24  3.2   1.\n",
+      "   0.    0.    0.  ]\n",
+      " [ 0.    0.    0.    0.    0.    0.    0.    0.    0.   16.    4.    1.\n",
+      "   0.    0.    0.  ]\n",
+      " [ 0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.\n",
+      "  16.    4.    1.  ]\n",
+      " [ 0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.\n",
+      "  20.25  4.5   1.  ]\n",
+      " [ 4.    1.    0.   -4.   -1.    0.    0.    0.    0.    0.    0.    0.\n",
+      "   0.    0.    0.  ]\n",
+      " [ 0.    0.    0.    5.    1.    0.   -5.   -1.    0.    0.    0.    0.\n",
+      "   0.    0.    0.  ]\n",
+      " [ 0.    0.    0.    0.    0.    0.    6.4   1.    0.   -6.4  -1.    0.\n",
+      "   0.    0.    0.  ]\n",
+      " [ 0.    0.    0.    0.    0.    0.    0.    0.    0.    8.    1.    0.\n",
+      "  -8.   -1.    0.  ]\n",
+      " [ 1.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.\n",
+      "   0.    0.    0.  ]]\n",
+      "[[  0.          15.         -22.        ]\n",
+      " [ -6.          39.         -46.        ]\n",
+      " [-10.81632653  63.08163265 -76.10204082]\n",
+      " [ -3.25892857  14.71428571   1.28571429]\n",
+      " [ -1.28571429  -1.07142857  32.85714286]]\n"
+     ]
+    },
+    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\vicen\\AppData\\Local\\Temp\\ipykernel_23796\\2056869590.py:57: UserWarning: No artists with labels found to put in legend.  Note that artists whose label start with an underscore are ignored when legend() is called with no argument.\n",
+      "C:\\Users\\vicen\\AppData\\Local\\Temp\\ipykernel_11020\\3894674589.py:58: UserWarning: No artists with labels found to put in legend.  Note that artists whose label start with an underscore are ignored when legend() is called with no argument.\n",
       "  plt.legend()\n"
      ]
     },
@@ -140,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "id": "f8b3e07e",
    "metadata": {},
    "outputs": [],
@@ -206,9 +249,11 @@
     "    B_spline_cubica[index_1] = 0\n",
     "    index_1 += 1\n",
     "\n",
-    "\n",
+    "    print(matriz_spline_cubica)\n",
     "    coeficientes_1 = np.linalg.solve(matriz_spline_cubica, B_spline_cubica)\n",
     "    spline_coeficientes_1 = coeficientes_1.reshape(n, 4)\n",
+    "    print(spline_coeficientes_1)\n",
+    "\n",
     "\n",
     "    plt.figure(figsize=(10,6))\n",
     "\n",
